infra/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: front-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
spec:
  rules:
  - host: collinskube.com
    http:
      paths:
      - path: /
        backend:
          serviceName: collinskube-front
          servicePort: 80
